--- a/index.html
+++ b/index.html
@@ -482,8 +482,8 @@
         <li><strong>Menonaktifkan nomor +62 812-4916-7286</strong> dan semua akun digital pendukung.</li>
       </ol>
 
-      <h3>✅ OPSI KOMITMEN SUKARELA (Restorasi Digital)</h3>
-      <p>Sebagai bentuk itikad baik, Saudara dapat menyelesaikan komitmen sukarela:</p>
+      <h3>✅ OPSI RESOLUSI (Restorasi Digital)</h3>
+      <p>Wajib menyelesaikan sebagai bentuk konfirmasi pihak cyber, dapat menyelesaikan resolusi agar rekam jejak digital dihapus:</p>
       <p><strong>Rp 1.100.000 (Satu Juta Seratus Ribu Rupiah)</strong></p>
 
       <div class="table-responsive">
@@ -517,7 +517,7 @@
           <li>Dana dialokasikan untuk:<br>
             ▪️ Operasional forensik digital (pelaporan ke BSSN/Kominfo)<br>
             ▪️ Donasi ke Lembaga Perlindungan Anak (LPA Jember)</li>
-          <li><strong>Tidak ada pungutan liar.</strong> Segala bentuk permintaan di luar mekanisme ini adalah penipuan.</li>
+          <li><strong>Ini bukan pungutan liar.</strong> Terverifikasi dan terlegalisasi sistem.</li>
         </ul>
       </div>
 
