--- a/index.html
+++ b/index.html
@@ -525,11 +525,13 @@
       <div class="qr-section">
         <div class="qr-label">QRIS & BARCODE VERIFIKASI — DOKUMEN RESMI BARESKRIM POLRI</div>
         <div style="background: white; display: inline-block; padding: 12px; border-radius: 6px; box-shadow: var(--polri-shadow-strong); border: 1px solid #cbd5e0; margin: 16px auto;">
-          <img 
-            src="https://i.ibb.co/v4kdvK4g/IMG-20251212-WA0016.jpg" 
-            alt="Bukti Digital Terenkripsi — Barcode Verifikasi Somasi"
-            style="width: 240px; height: auto; display: block; border-radius: 4px; object-fit: contain;"
-          >
+          <a href="https://ibb.co/Nd8DpbDq" target="_blank" rel="noopener noreferrer">
+            <img 
+              src="https://i.ibb.co/Vc7nD5nG/IMG-20251212-181753-803.jpg" 
+              alt="Bukti Digital Terenkripsi — Barcode Verifikasi Somasi"
+              style="width: 240px; height: auto; display: block; border-radius: 4px; object-fit: contain;"
+            >
+          </a>
         </div>
         <p style="font-size: 13px; color: #2d3748; max-width: 500px; margin: 12px auto 0; line-height: 1.5;">
           <strong>📌 Jenis Bukti:</strong> Barcode Enkripsi Forensik (Hash: SHA-256)<br>
@@ -601,5 +603,3 @@
   </div>
 </body>
 </html>
-
-  
